# PigMaxApp

./: .gitignore  README.md  render.yaml  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: pig_profile.py  pig_settings.py  pig_stocking.py  pig_thermal.py
backend/app/routers/: feedback.py  pig_calc.py  pig_settings.py
backend/app/static/: feedback.js  i18n.js  index.html  styles.css
backend/app/static/i18n/: de.js  en.js  fr.js  pl.js  ru.js
