[project]
name = "pigmax"
version = "0.1.0"
description = "Pig house ventilation calculator — PIC 2019 based"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.30.0,<0.35.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",
]

[tool.uvicorn]
factory = false
